Added image, paragraph, and anchor elements

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Almost Valentine's Day!</title>
 </head>
 
 <body>
-  Let's make cupcakes!
+  <h1>Let's make cupcakes!</h1>
+  <img src="Images/Cupcake-with-chocolate-heart.jpg" />
+  <p>Cupcake ipsum dolor. Sit amet brownie muffin tart candy biscuit. Bonbon cake topping. Ice cream jelly-o pudding candy chocolate jelly. Wafer toffee ice cream. Jelly-o bear claw brownie topping lollipop jujubes chupa chups chocolate cake. Chupa chups candy gingerbread gummies carrot cake brownie chupa chups tootsie roll toffee. Pudding candy canes gummies sweet roll lollipop jelly gingerbread. Soufflé halvah gummi bears cookie. Sugar plum pudding muffin. Halvah cotton candy tart donut. Cheesecake soufflé marshmallow cake sweet toffee gummi bears cupcake tiramisu. Tiramisu topping lollipop. </p>
+  <a href="https://en.wikipedia.org/wiki/Cupcake"> Cupcake Wiki </a>
+
 </body>
 
 </html>
