Made CSS file, attached to HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Almost Valentine's Day!</title>
+  <link rel="stylesheet" type="text/css" href="cupcake.css" />
 </head>
 
 <body>
