correct raspberry cupcake image

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <h2> Delectable Raspberry-filled Angel Cakes </h2>
 
-<img src="Images/cupcake with beaters.jpg"
-    
+<img src="Images/cupcake with beaters.jpg" />
+
   <h3> Angelic Almond Cake <h3>
     <img src=""
 
