Added almond batter photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img src="Images/cupcake with beaters.jpg" />
 
   <h3> Angelic Almond Cake <h3>
-    <img src=""
+    <img src="Images/almond batter.jpg" />
 
 </body>
 
